<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BoletimActivity"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="450dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="#000"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:background="#E4580C">

                <TextView
                    android:id="@+id/txtText"
                    style="@style/boletim"
                    android:layout_width="220dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/boletim"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtdata"
                    style="@style/data"
                    android:layout_width="82dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:background="#FF3E01"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@+id/txtText"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="19/04/2020" />

                <TextView
                    android:id="@+id/text_confirmados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtText"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/casos_confirmados"
                    app:layout_constraintStart_toEndOf="@+id/text_confirmados"
                    app:layout_constraintTop_toBottomOf="@+id/txtText"
                    tools:text="Casos\nConfirmados" />

                <TextView
                    android:id="@+id/txt_descartados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_Suspeitos"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/casos_descartados"
                    app:layout_constraintStart_toEndOf="@+id/txt_descartados"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:text="@string/casos_descartados" />

                <TextView
                    android:id="@+id/txt_Suspeitos"
                    style="@style/textos"
                    android:layout_width="34dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_iso_hospitalar"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/casos"
                    android:layout_width="107dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/casos_suspeitos"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/txt_Suspeitos"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/txt_curados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_descartados"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/casos_curados"
                    app:layout_constraintStart_toEndOf="@+id/txt_monitorados"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/txt_monitorados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_curados"
                    tools:text="100" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/casos_monitorados"
                    app:layout_constraintStart_toEndOf="@+id/txt_curados"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/txt_iso_domiciliar"
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_confirmados"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/iso_domiciliar"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/txt_iso_domiciliar"
                    app:layout_constraintTop_toBottomOf="@+id/text_confirmados" />

                <TextView
                    android:id="@+id/txt_iso_hospitalar"
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_iso_domiciliar"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/iso_hospitalar"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/txt_iso_hospitalar"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/txt_mortes"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_monitorados"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="28dp"
                    app:layout_constraintStart_toEndOf="@+id/txt_mortes"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    tools:text="@string/mortes" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>